fix(perm): T-PERM-085 保持类型级拒绝原因与角色顺序
按确认口径，TYPE_LEVEL 排除子授权后无有效候选返回 NO_PERMISSION；仅 TARGET_SET 记录父上下文排除原因，原条件/互斥清空优先级不变。

RunState 用不可变 LinkedHashSet 副本保留角色解析结果的迭代序，并维持 null 元素拒绝。补相反输入顺序回归锁与 PostgreSQL 下旧单条/批量原因对照。

验证：修复前 3 处断言失败；定向 40 单测+10 PG/Redis 通过。2026-09-26 mvn test -T 1C 全量 2170 项通过，零失败/错误/跳过，含 E2E/heavy。设计与任务完成证据已回写。